--- a/index.ipynb
+++ b/index.ipynb
@@ -82,7 +82,8 @@
    "outputs": [],
    "source": [
     "#Your code here\n",
-    "import s"
+    "import sqlite3\n",
+    "conn="
    ]
   },
   {
