--- a/index.ipynb
+++ b/index.ipynb
@@ -83,7 +83,7 @@
    "source": [
     "#Your code here\n",
     "import sqlite3\n",
-    "conn=sqlite.connection()"
+    "conn=sqlite3.Connection()"
    ]
   },
   {
