Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -83,7 +83,8 @@
    "source": [
     "#Your code here\n",
     "import sqlite3\n",
-    "conn=sqlite3.Connection()"
+    "conn=sqlite3.Connection()\n",
+    "c=conn.cursou"
    ]
   },
   {
