Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -84,7 +84,7 @@
     "#Your code here\n",
     "import sqlite3\n",
     "conn=sqlite3.Connection()\n",
-    "c=conn.cursou"
+    "c=conn.cursor()"
    ]
   },
   {
