--- a/index.ipynb
+++ b/index.ipynb
@@ -84,7 +84,8 @@
     "#Your code here\n",
     "import sqlite3\n",
     "conn=sqlite3.Connection('babe_ruth_stats')\n",
-    "c=conn.cursor()"
+    "c=conn.cursor()\n",
+    "imp"
    ]
   },
   {
