Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -77,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -85,7 +85,7 @@
     "import sqlite3\n",
     "conn=sqlite3.Connection('babe_ruth_stats')\n",
     "c=conn.cursor()\n",
-    "imp"
+    "import pandas as pd"
    ]
   },
   {
