--- a/index.ipynb
+++ b/index.ipynb
@@ -103,7 +103,7 @@
    "outputs": [],
    "source": [
     "#Your code here\n",
-    "c.execute('''''')"
+    "c.execute('''SELECT count(year)''')"
    ]
   },
   {
