Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -103,7 +103,8 @@
    "outputs": [],
    "source": [
     "#Your code here\n",
-    "c.execute('''SELECT count(year)''')"
+    "c.execute('''SELECT count(year) as num_years\n",
+    "''')"
    ]
   },
   {
