--- a/index.ipynb
+++ b/index.ipynb
@@ -77,13 +77,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
     "#Your code here\n",
     "import sqlite3\n",
-    "conn=sqlite3.Connection('babe_ruth_stats')\n",
+    "conn=sqlite3.Connection('babe_ruth.db')\n",
     "c=conn.cursor()\n",
     "import pandas as pd"
    ]
@@ -98,19 +98,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
-     "ename": "OperationalError",
-     "evalue": "no such table: babe_ruth_stats",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m\u001b[0m",
-      "\u001b[0;31mOperationalError\u001b[0mTraceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-4-d66ff5a4f20a>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;31m#Your code here\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0mc\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mexecute\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'''SELECT count(year) as num_years FROM babe_ruth_stats'''\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;31mOperationalError\u001b[0m: no such table: babe_ruth_stats"
-     ]
+     "data": {
+      "text/plain": [
+       "<sqlite3.Cursor at 0x7fde603610a0>"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
