Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -98,23 +98,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<sqlite3.Cursor at 0x7fde603610a0>"
+       "[(22,)]"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "#Your code here\n",
-    "c.execute('''SELECT count(year) as num_years FROM babe_ruth_stats''')"
+    "c.execute('''SELECT count(year) as num_years FROM babe_ruth_stats''').fetchall()"
    ]
   },
   {
