--- a/index.ipynb
+++ b/index.ipynb
@@ -132,7 +132,7 @@
    "outputs": [],
    "source": [
     "#Your code here\n",
-    "c.execu"
+    "c.execute('''SELECT count(year) as num_ye''')"
    ]
   },
   {
