Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -132,7 +132,7 @@
    "outputs": [],
    "source": [
     "#Your code here\n",
-    "c.execute('''SELECT count(year) as num_ye''')"
+    "c.execute('''SELECT count(year) as num_years_NY FROM babe_ruth_stats''')"
    ]
   },
   {
