--- a/index.ipynb
+++ b/index.ipynb
@@ -127,12 +127,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[(15,)]"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "#Your code here\n",
-    "c.execute('''SELECT count(year) as num_years_NY FROM babe_ruth_stats WHERE team==\"NY\"''')"
+    "c.execute('''SELECT count(year) as num_years_NY FROM babe_ruth_stats WHERE team==\"NY\"''').fetchall()"
    ]
   },
   {
@@ -149,7 +160,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Your code here"
+    "#Your code here\n"
    ]
   },
   {
