--- a/index.ipynb
+++ b/index.ipynb
@@ -160,7 +160,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Your code here\n"
+    "#Your code here\n",
+    "c.execute('''SELECT c''')"
    ]
   },
   {
