Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -161,7 +161,7 @@
    "outputs": [],
    "source": [
     "#Your code here\n",
-    "c.execute('''SELECT * as most_HR FROM babe_ruth_stats ''')"
+    "c.execute('''SELECT * as most_HR FROM babe_ruth_stats WHERE H''')"
    ]
   },
   {
