--- a/index.ipynb
+++ b/index.ipynb
@@ -161,7 +161,7 @@
    "outputs": [],
    "source": [
     "#Your code here\n",
-    "c.execute('''SELECT * as most_HR FROM babe_ruth_stats WHERE HR=('''SELECT ''')''')"
+    "c.execute('''SELECT * as most_HR FROM babe_ruth_stats WHERE HR=('''SELECT max(HR) FROM babe_ruth_stats''')''')"
    ]
   },
   {
