--- a/index.ipynb
+++ b/index.ipynb
@@ -156,12 +156,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (<ipython-input-9-852ff4a6001d>, line 2)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-9-852ff4a6001d>\"\u001b[0;36m, line \u001b[0;32m2\u001b[0m\n\u001b[0;31m    c.execute('''SELECT * as most_HR FROM babe_ruth_stats WHERE HR=('''SELECT max(HR) FROM babe_ruth_stats''')''').fetchall()\u001b[0m\n\u001b[0m                                                                            ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+     ]
+    }
+   ],
    "source": [
     "#Your code here\n",
-    "c.execute('''SELECT * as most_HR FROM babe_ruth_stats WHERE HR=('''SELECT max(HR) FROM babe_ruth_stats''')''')"
+    "c.execute('''SELECT * as most_HR FROM babe_ruth_stats WHERE HR=('''SELECT max(HR) FROM babe_ruth_stats''')''').fetchall()"
    ]
   },
   {
