--- a/index.ipynb
+++ b/index.ipynb
@@ -156,21 +156,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (<ipython-input-9-852ff4a6001d>, line 2)",
+     "ename": "OperationalError",
+     "evalue": "near \"as\": syntax error",
      "output_type": "error",
      "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-9-852ff4a6001d>\"\u001b[0;36m, line \u001b[0;32m2\u001b[0m\n\u001b[0;31m    c.execute('''SELECT * as most_HR FROM babe_ruth_stats WHERE HR=('''SELECT max(HR) FROM babe_ruth_stats''')''').fetchall()\u001b[0m\n\u001b[0m                                                                            ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+      "\u001b[0;31m\u001b[0m",
+      "\u001b[0;31mOperationalError\u001b[0mTraceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-10-6ce89cd6ddd4>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;31m#Your code here\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0mc\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mexecute\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'''SELECT * as most_HR FROM babe_ruth_stats WHERE HR=(SELECT max(HR) FROM babe_ruth_stats)'''\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfetchall\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mOperationalError\u001b[0m: near \"as\": syntax error"
      ]
     }
    ],
    "source": [
     "#Your code here\n",
-    "c.execute('''SELECT * as most_HR FROM babe_ruth_stats WHERE HR=('''SELECT max(HR) FROM babe_ruth_stats''')''').fetchall()"
+    "c.execute('''SELECT * as most_HR FROM babe_ruth_stats WHERE HR=(SELECT max(HR) FROM babe_ruth_stats)''').fetchall()"
    ]
   },
   {
