--- a/index.ipynb
+++ b/index.ipynb
@@ -172,7 +172,7 @@
    ],
    "source": [
     "#Your code here\n",
-    "c.execute('''SELECT HR FROM babe_ruth_stats WHERE HR=(SELECT max(HR) FROM babe_ruth_stats)''').fetchall()"
+    "c.execute('''SELECT * FROM babe_ruth_stats WHERE HR=(SELECT max(HR) FROM babe_ruth_stats)''').fetchall()"
    ]
   },
   {
