--- a/index.ipynb
+++ b/index.ipynb
@@ -185,11 +185,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[(1, 1914, 'BOS', 'AL', 1, 0, 2, 0, 5, 1, 2, 10, 0, 0, 4, 0.2)]"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "#Your code here"
+    "#Your code here\n",
+    "c.execute('''SELECT * FROM babe_ruth_stats WHERE HR=(SELECT min(HR) FROM babe_ruth_stats)''').fetchall()"
    ]
   },
   {
