--- a/index.ipynb
+++ b/index.ipynb
@@ -218,7 +218,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Your code here"
+    "#Your code here\n",
+    "c.execute('''SELECT ''')"
    ]
   },
   {
