--- a/index.ipynb
+++ b/index.ipynb
@@ -219,7 +219,7 @@
    "outputs": [],
    "source": [
     "#Your code here\n",
-    "c.execute('''SELECT ''')"
+    "c.execute('''SELECT sum(H)''')"
    ]
   },
   {
