Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -219,7 +219,7 @@
    "outputs": [],
    "source": [
     "#Your code here\n",
-    "c.execute('''SELECT sum(H)''')"
+    "c.execute('''SELECT sum(HR) FROM babe_ruth_stats''')"
    ]
   },
   {
