Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -247,7 +247,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Your code here\n"
+    "#Your code here\n",
+    "c.execute('''SE''')"
    ]
   },
   {
