Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -248,7 +248,7 @@
    "outputs": [],
    "source": [
     "#Your code here\n",
-    "c.execute('''SELECT * FROM babe_ruth_stats WHERE ''')"
+    "c.execute('''SELECT * FROM babe_ruth_stats WHERE games>10''')"
    ]
   },
   {
